Update Wordsearch page to add more functionality, new icon and thumbs and fix layout issues

--- a/modules/xerte/parent_templates/Nottingham/common_html5/wordfind/style.css
+++ b/modules/xerte/parent_templates/Nottingham/common_html5/wordfind/style.css
@@ -66,13 +66,6 @@ button::-moz-focus-inner {
 */
 #words {
   padding-top: 20px;
-  -moz-column-count: 2;
-  -moz-column-gap: 20px;
-  -webkit-column-count: 2;
-  -webkit-column-gap: 20px;
-  column-count: 2;
-  column-gap: 20px;
-  width: 300px;
 }
 
 #words ul {
